@@ -1,0 +1,13 @@
+KPRINTF CONVERSION SPECIFIERS DOCUMENTATION
+ACCURATE AS OF: 2020-08-16
+
+These conversion specifiers are modelled on standard C printf, but do not
+exactly mirror them, as the situational needs are different.  Some features
+will not exist, some new ones will be added, and some conversion specifiers
+may not function exactly like they do in standard C printf.
+
+%%	literal "%"
+%hu	uint8_t converted to unsigned decimal notation
+%u	uint16_t converted to unsigned decimal notation
+%lu	uint32_t converted to unsigned decimal notation
+%llu	uint64_t converted to unsigned decimal notation
