@@ -1,5 +1,6 @@
 2020-08-16
 	* basic kprintf implementation--no format strings yet (kmw)
+	* kprintf now supports unsigned integer-to-decimal conversions (kmw)
 
 2020-08-15
 	* console driver infrastructure and vga console driver (kmw)
